# nm_lab_spline

./: .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  Problems.cpp  Problems.h  README.md  Solver.cpp  Solver.h  Spline.cpp  Spline.h  main.cpp  mainwindow.cpp  mainwindow.h  tridiagonal_matrix_algorithm.cpp  tridiagonal_matrix_algorithm.h
headers/: Functions.h  Problems.h  Solver.h  Spline.h  tridiagonal_matrix_algorithm.h
src/: Functions.cpp  Problems.cpp  Solver.cpp  Spline.cpp  plotmanager.cpp  tablemanager.cpp  tridiagonal_matrix_algorithm.cpp
